# DoubleDescription

./: .gitignore  README.md  exp.rosinstall  falcon.rosinstall  launch_bench.bash
exp_utils/VINS-Fusion/config/: f250_ariel.yaml  fast_drone_250.yaml  vins_rviz_config.rviz
exp_utils/VINS-Fusion/global_fusion/src/: globalOptNode.cpp
exp_utils/VINS-Fusion/loop_fusion/src/: pose_graph_node.cpp
exp_utils/VINS-Fusion/vins_estimator/launch/: f250_ariel.launch
time_opt_trajs/: LICENSE  README.md
time_opt_trajs/local_mapping/: CMakeLists.txt  package.xml
time_opt_trajs/local_mapping/include/local_mapping/: grid_map.h
time_opt_trajs/local_mapping/src/: grid_map.cpp  obj_generator.cpp  obj_predictor.cpp  raycast.cpp
time_opt_trajs/path_searching/: CMakeLists.txt  package.xml
time_opt_trajs/path_searching/include/path_searching/: kino_acc_astar.h  kino_jerk_astar.h  kino_utils.hpp  kinodynamic_astar.h
time_opt_trajs/path_searching/src/: kino_acc_astar.cpp  kino_jerk_astar.cpp  kinodynamic_astar.cpp
time_opt_trajs/plan_manage/: CMakeLists.txt  package.xml
time_opt_trajs/plan_manage/include/plan_manage/: planner_manager.h  poly_opt.h  replan_fsm.h
time_opt_trajs/plan_manage/launch/: advanced_param.xml  local_planner.launch  planner_exp.launch  planner_sim.launch  run_in_exp.launch  run_in_sim.launch  rviz.launch  sim.launch
time_opt_trajs/plan_manage/rviz/: config.rviz  config_exp.rviz  config_sim.rviz
time_opt_trajs/plan_manage/src/: planner_manager.cpp  planner_node.cpp  poly_opt.cpp  replan_fsm.cpp
time_opt_trajs/utils/DecompROS/decomp_ros_utils/: CMakeLists.txt  package.xml
time_opt_trajs/utils/DecompROS/decomp_ros_utils/include/decomp_util/: ellipsoid_decomp.h
time_opt_trajs/utils/odom_visualization/src/: odom_visualization.cpp
time_opt_trajs/utils/plan_msgs/: CMakeLists.txt  package.xml
time_opt_trajs/utils/plan_msgs/msg/: Cylinders.msg
time_opt_trajs/utils/traj_utils/: CMakeLists.txt  package.xml
time_opt_trajs/utils/traj_utils/include/traj_utils/: plan_container.hpp  planning_visualization.h
time_opt_trajs/utils/waypoint_generator/src/: waypoint_generator.cpp
traj_utils/: CMakeLists.txt
traj_utils/include/traj_utils/: lbfgs_old.hpp  planning_visualization.h  traj_min_jerk.hpp
traj_utils/src/: planning_visualization.cpp
utils/plan_msgs/msg/: PolyTraj.msg
utils/safe_odom/: CMakeLists.txt  package.xml
utils/safe_odom/launch/: safe_odom.launch
utils/safe_odom/src/: safe_odom.cpp
utils/traj_utils/include/traj_utils/: traj_min_jerk.hpp
utils/traj_utils/src/: planning_visualization.cpp
utils_exp/VINS-Fusion/config/: left.yaml
utils_exp/VINS-Fusion/loop_fusion/src/: pose_graph.cpp
utils_exp/VINS-Fusion/vins_estimator/src/utility/: visualization.cpp
