<?xml version="1.0"?>
<package format="2">
  <name>plan_manage</name>
  <version>0.0.0</version>
  <description>The plan_manage package</description>

  <maintainer email="yuweiwu@seas.upenn.edu">Yuwei WU</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>local_mapping</build_depend>
  <build_depend>path_searching</build_depend>
  <build_depend>traj_utils</build_depend>
  <build_depend>generating_corridor</build_depend>
  <build_depend>plan_msgs</build_depend>
  <build_depend>decomp_ros_utils</build_depend>

  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_s</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>local_mapping</exec_depend>
  <exec_depend>path_searching</exec_depend>
  <exec_depend>traj_utils</exec_depend>  
  <exec_depend>generating_corridor</exec_depend>


</package>
