<package format="2">
  <name>plan_msgs</name>
  <version>1.0.0</version>
  <description>plan_msgs</description>
  <maintainer email="yuweiwu@seas.upenn.edu">Yuwei Wu</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
